[tool.poetry]
name = "ta-bl-car-api"
version = "0.1.0"
description = ""
authors = ["Renato Silva <renatoramossilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
black = "^24.10.0"
pylint = "^3.3.1"
isort = "^5.13.2"
mypy = "^1.13.0"
