[tool.poetry]
name = "ta-bl-car-api"
version = "0.1.0"
description = ""
authors = ["Renato Silva <renatoramossilva@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
black = "^24.10.0"
pylint = "^3.3.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"
tox = "^4.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
